--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Coming Soon 3</title>
+	<title>Dubori-Coming Soon</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -53,7 +53,7 @@
 					<span class="s1-txt1">Seconds</span>
 				</div>
 			</div>
-
+<!-- 
 			<form class="flex-w flex-c-m contact100-form validate-form p-t-55">
 				<div class="wrap-input100 validate-input where1" data-validate = "Email is required: ex@abc.xyz">
 					<input class="s1-txt2 placeholder0 input100" type="text" name="email" placeholder="Your Email">
@@ -70,7 +70,7 @@
 			<p class="s1-txt4 txt-center p-t-10">
 				I promise to <span class="bor2">never</span> spam
 			</p>
-			
+			 -->
 		</div>
 	</div>
 
@@ -96,12 +96,12 @@
 			/*Endtime must be > current time*/
 			endtimeYear: 0,
 			endtimeMonth: 0,
-			endtimeDate: 35,
+			endtimeDate: 1,
 			endtimeHours: 18,
 			endtimeMinutes: 0,
 			endtimeSeconds: 0,
-			timeZone: "" 
-			// ex:  timeZone: "America/New_York"
+			timeZone: "Asia/Kolkata" 
+			// ex:  timeZone: "Asia/Kolkata"
 			//go to " http://momentjs.com/timezone/ " to get timezone
 		});
 	</script>
