--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<span class="l1-txt1 p-b-9 seconds">39</span>
 					<span class="s1-txt1">Seconds</span>
 				</div>
-			</div>
+			<!-- </div>
  
 			<form class="flex-w flex-c-m contact100-form validate-form p-t-55">
 				<div class="wrap-input100 validate-input where1" data-validate = "Email is required: ex@abc.xyz">
@@ -71,7 +71,7 @@
 				I promise to <span class="bor2">never</span> spam
 			</p>
 			 
-		</div>
+		</div> -->
 	</div>
 
 
